--- a/src/index.less
+++ b/src/index.less
@@ -1234,9 +1234,29 @@ form fieldset {
       left: -2 * @icon-size;
       top: -3 * @icon-size;
     }
+
     &.chevron-right {
       left: -3 * @icon-size;
       top: -3 * @icon-size;
     }
+  }
+}
+
+
+.comments {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 300px;
+  min-height: 100px;
+  background: #fff;
+  border: 1px solid #ccc;
+  padding: 20px;
+  text-align: left;
+  z-index: 30;
+
+  .title {
+    font-size: 16px;
+    margin-bottom: 20px;
   }
 }
