comment组件完善；切换sheet滚动条位置优化

--- a/src/index.less
+++ b/src/index.less
@@ -1247,7 +1247,7 @@ form fieldset {
 }
 
 
-.comments {
+.@{css-prefix}-comments {
     position: absolute;
     left: 0;
     top: 0;
@@ -1255,13 +1255,23 @@ form fieldset {
     min-height: 100px;
     background: #fff;
     border: 1px solid #ccc;
-    padding: 20px;
+
     text-align: left;
     z-index: 30;
+    border-radius: 5px;
+    box-shadow: 0 2px 12px 0 rgba(0, 0, 0, .1);
 
-    .title {
-        font-size: 16px;
-        margin-bottom: 20px;
+    &-title {
+        padding: 10px;
+        font-size: 14px;
+        border-bottom: 1px solid #eee;
+        letter-spacing: 1px;
+    }
+
+    &-content {
+        font-size: 14px;
+        line-height: 1.5;
+        padding: 10px;
     }
 }
 
@@ -1269,6 +1279,7 @@ form fieldset {
     .split-title {
         font-size: 16px;
         padding: 10px 0;
+        letter-spacing: 1px;
     }
 
     .options {
