--- a/src/index.less
+++ b/src/index.less
@@ -1260,7 +1260,8 @@ form fieldset {
     z-index: 30;
     border-radius: 5px;
     box-shadow: 0 2px 12px 0 rgba(0, 0, 0, .1);
-
+    height: 100px;
+    overflow-y: auto;
     &-title {
         padding: 10px;
         font-size: 14px;
@@ -1272,6 +1273,7 @@ form fieldset {
         font-size: 14px;
         line-height: 1.5;
         padding: 10px;
+        word-break: break-all ;
     }
 }
 
